change player button color

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,7 +3,9 @@
 .plyr__controls
   font-family: 'Poppins', sans-serif
 .plyr__control--overlaid
-  background: #000 !important
+  background: #FA6A18 !important
+  border: 2px solid #fff !important
+
 .plyr--full-ui input[type=range]
   color: #FA6A18 !important
 .plyr__menu__container .plyr__control[role=menuitemradio][aria-checked=true]::before
