update: new player and update web&ui data

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1055,7 +1055,7 @@ section.talk2me
   position: relative
   text-align: center
   span
-    color: $black
+    color: #363636
     font-size: 14px
     display: block
     text-align: center
@@ -1069,6 +1069,7 @@ section.talk2me
     font-weight: normal
     letter-spacing: -2px
     margin: 0
+    color: #363636
 
     +smallDesktop
       font-size: 115px*0.8
@@ -1086,6 +1087,7 @@ section.talk2me
     font-size: vw(80px)
     letter-spacing: -2px
     margin: 0
+    color: #363636
 
     +smallDesktop
       font-size: 80px*0.8
@@ -1180,6 +1182,10 @@ section.talk2me
   100%
     transform: translateY(0)
 
+
+#demo-video
+  max-width: 1000px
+  margin: 0 auto
 
 .kay-illustrator
   position: absolute
@@ -1294,7 +1300,7 @@ section.talk2me
 
   
 
-  h1 
+  h1 ,a
     display: block
     margin: 0
     font-size: 18px
@@ -1302,6 +1308,8 @@ section.talk2me
     line-height: 40px
     letter-spacing: 1px
     font-family: 'IM Fell French Canon', serif
+    text-decoration: none
+    color: #000
 
     +pad
       line-height: 55px
@@ -1351,7 +1359,7 @@ section.talk2me
     color: #363636
     font-size: 14px
     line-height: 2
-    font-family: 'Noto Serif TC', serif
+    font-family: "Poppins","Noto Serif TC",sans-serif
     margin: 0
   
 
