--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1352,10 +1352,8 @@ section.talk2me
   text-align: center
   z-index: 30
 
-  
-
   h1 ,a
-    display: block
+    display: inline-block
     margin: 0
     font-size: 18px
     font-weight: normal
