--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -735,6 +735,7 @@ section.talk2me
     font-weight: normal
     text-transform: uppercase
     line-height: 1.5
+    padding-bottom: 3px
     font-family: 'Poppins', sans-serif
 
     &:before  
@@ -744,7 +745,7 @@ section.talk2me
       left: 50%
       transform: translateX(-50%)
       width: 50%
-      height: 1px
+      height: 2px
       background-color: #363636
       transition: all .5s ease
       
