add cursor icon

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -944,7 +944,7 @@ section.talk2me
     +desktop
       top: 10%
       left: 8%
-      font-size: 70px
+      font-size: 60px
       width: 40%
 
     +desktopL
@@ -961,8 +961,9 @@ section.talk2me
       padding: 15px
       box-sizing: border-box
       text-align: center
-      font-size: vw(44px,390px)
+      font-size: vw(40px,390px)
       padding-bottom: 5%
+
 
   p
     color: #363636
@@ -1738,3 +1739,11 @@ span.ico-plus-md
   left: 165px
 
 
+
+.gooey-cursor
+  --color: #ff7423
+
+  &.clicking
+    width: 70px
+    height: 70px
+    background: none
