--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,12 +25,20 @@
   position: fixed
   top: 0
   left: 0
-  right: 0
-  bottom: 0
+  width: 100%
+  height: 100vh
   z-index: 40000
-  background: $darkbg url(../assets/bmp.png) repeat
-  display: none
+  overflow: hidden
+  // display: none
 
+  .bg
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100vh
+    background: $darkbg url(../assets/bmp.png) repeat
+    z-index: 1
   
   .center
     display: flex
@@ -38,6 +46,8 @@
     justify-content: center
     width: 100%
     height: 100%
+    position: relative
+    z-index: 2
 
   svg
     max-width: 700px
@@ -152,6 +162,16 @@
     width: 0
     height: 0
 
+
+#nav-overlay
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100vh
+  background: #000
+  z-index: 2000
+
 #navigation
   position: fixed
   top: 0
@@ -166,8 +186,8 @@
   display: none
 
   &.shrik
-    opacity: 1
-    display: block
+    // opacity: 1
+    // display: block
 
   .nav-row
     display: flex
@@ -220,6 +240,11 @@
         font-size: vw(50px,390px)
       &:hover
         color: #fff
+
+      &.router-link-active
+        color: #fff
+        pointer-events: none
+        
 
 .section
   display: flex
