--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -20,7 +20,10 @@
 .fade-enter, .fade-leave-to 
     opacity: 0
 
-
+body
+  position: relative
+  background: $darkbg url(/src/assets/bmp.png) repeat
+  
 #loading-layer
   position: fixed
   top: 0
@@ -1210,8 +1213,8 @@ section.talk2me
     background: url('/src/assets/arrow-down.svg') no-repeat center top
     background-size: contain
   
-#wrapper
-  overflow-x: hidden
+// #wrapper
+//   overflow-x: hidden
 
 #button-scrolldown
   position: absolute
