--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -54,9 +54,13 @@ body
 
   svg,img
     max-width: 700px
-    
+    width: 80%
+    margin: 0 auto
+
     +pad
       padding: 15px 30px
+      transform: translateY(-50px)
+
 
 @keyframes fill 
     to
