--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -581,6 +581,10 @@ section.work-experience
 section.talk2me
   position: relative
   background: $darkbg url(/src/assets/bmp.png) repeat
+  +pad
+    min-height: auto
+    box-sizing: border-box
+    padding-bottom: 80px
 
 
 
@@ -642,6 +646,9 @@ section.talk2me
     width: 100%
     height: 114px
     background: $org
+
+    +pad
+      height: 50px
 
   +smallDesktop
     margin-left: none
