--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -240,7 +240,8 @@ body
       color: #262626
       font-size: 60px
       line-height: 1.2
-      font-family: 'Poppins', sans-serif
+      // font-family: 'Poppins', sans-serif
+      font-family: "IM Fell French Canon", serif
       text-decoration: none
       transition: all .5s ease
       +pad
@@ -1415,6 +1416,7 @@ section.talk2me
   right: 15px
   color: $black
   text-align: center
+  text-transform: uppercase
   z-index: 30
 
   h1 ,a
@@ -1465,17 +1467,17 @@ section.talk2me
 .collapse-group
   text-align: left
   padding-left: 100px
-  margin-bottom: 50px
+  margin-bottom: 40px
   +pad
     padding-left: vw(60px ,390px)
-    margin-bottom: 40px
+    margin-bottom: 30px
 
   ol
     padding-left: 0
     list-style: none
     color: #363636
     font-size: 14px
-    line-height: 2
+    line-height: 1.8
     font-family: "Poppins","Noto Serif TC",sans-serif
     margin: 0
   
@@ -1487,7 +1489,7 @@ section.talk2me
     font-size: 76px
     text-decoration: none
     line-height: 1
-    margin-bottom: 50px
+    margin-bottom: 30px
 
     +smallDesktop
       font-size: 76px * 0.8
@@ -1502,7 +1504,8 @@ section.talk2me
     .title
       position: relative
       display: inline-block
-      font-family: 'Poppins', serif
+      // font-family: 'Poppins', serif
+      font-family: "IM Fell French Canon","Noto Serif TC",sans-serif
 
       &:before
         content: ""
