update project & information

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -822,7 +822,7 @@ section.talk2me
   top: 0
   left: 0
   color: $org
-  font-size: 45px
+  font-size: 36px
   font-weight: normal
   font-family: 'Poppins', sans-serif
   display: inline-block
@@ -880,11 +880,11 @@ section.talk2me
 
 .about-kay
   font-family: 'IM Fell French Canon', serif
-  padding-top: 12%
+  padding-top: 6%
   text-align: center
 
   +desktopL
-    padding-top: 12%
+    padding-top: 6%
 
   +pad
     padding-top: vw(80px,390px)
@@ -920,7 +920,7 @@ section.talk2me
       font-size: 40px
 
     +desktop
-      font-size: vw(80px)
+      font-size: vw(64px)
 
     +pad
       font-size: vw(21px,390px)
@@ -965,18 +965,18 @@ section.talk2me
 
   p
     color: #363636
-    font-size: vw(80px)
+    font-size: vw(64px)
     font-weight: 500
     line-height: 1.5
     margin: 0
     letter-spacing: -2px
-    text-transform: lowercase
+    // text-transform: lowercase
 
     +smallDesktop
-      font-size: 80px * 0.8
+      font-size: 64px * 0.8
 
     +desktop
-      font-size: vw(80px)
+      font-size: vw(64px)
 
     +pad
       font-size: vw(21px,390px)
@@ -1152,10 +1152,10 @@ section.talk2me
     color: #363636
 
     +smallDesktop
-      font-size: 115px*0.8
+      font-size: 116px*0.8
 
     +desktop
-      font-size: vw(115px)
+      font-size: vw(116px)
 
     +pad
       font-size: vw(45px,390px)
@@ -1170,10 +1170,10 @@ section.talk2me
     color: #363636
 
     +smallDesktop
-      font-size: 80px*0.8
+      font-size: 64px*0.8
 
     +desktop
-      font-size: vw(80px)
+      font-size: vw(64px)
 
     +pad
       font-size: vw(31px,390px)
@@ -1184,6 +1184,7 @@ section.talk2me
       padding-left: vw(110px)
       +pad
         padding-left: vw(55px,390px)
+        
     
 
     span
